--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<h1>Blogger API</h1>
 
 		<!-- jQuery -->
-		<script src="`/jquery`"></script>
+		<script src="/jquery"></script>
 
 		<script src="js/script.js"></script>
 	</body>
