--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
-		<link rel="stylesheet" href="css/master.css">
+		<link rel="stylesheet" href="css/master.min.css">
 	</head>
 	<body>
 		<h1>Blogger API</h1>
@@ -15,6 +15,6 @@
 		<!-- jQuery -->
 		<script src="/jquery"></script>
 
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 	</body>
 </html>
