--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
-		<link rel="stylesheet" href="css/master.min.css">
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body>
 		<h1>Blogger API</h1>
