first commit html and css changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
 	<body>
 		<h1>Blogger API</h1>
 
+		<form class="" action="formSubmit" method="post">
+	    <label for="">Search</label>
+	    <input type="text" name="" value="">
+	    <button type="button" name="button">Submit</button>
+	  </form>
+
 		<!-- jQuery -->
 		<script src="/jquery"></script>
 
