styles changes, ugly ones

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
 	    <input type="text" name="" value="">
 	    <button type="button" name="button">Submit</button>
 	  </form>
+		<div class="w3-container">
+			<h2>Guess What!?</h2>
+		</div>
 
 		<!-- jQuery -->
 		<script src="/jquery"></script>
