body parser stuff

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 	<body>
 		<h1>Blogger API</h1>
 
-		<form class="" action="formSubmit" method="post">
+		<form class="" action="/formSubmit" method="post">
 	    <label for="">Search</label>
-	    <input type="text" name="" value="">
-	    <button type="button" name="button">Submit</button>
+	    <input type="text" name="title" value="">
+	    <button type="submit">Submit</button>
 	  </form>
 		<div class="w3-container">
 			<h2>Guess What!?</h2>
